--- a/plugins/misc/upload/config.ini
+++ b/plugins/misc/upload/config.ini
@@ -4,6 +4,6 @@ min_core: 0
 max_core: 0
 client_type:
 envs:
-bins: ffmpeg
+bins:
 packages: stagger, Pillow==9.0.0, hachoir
 depends: download, thumbnail
