--- a/plugins/misc/upload/config.ini
+++ b/plugins/misc/upload/config.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
 available: true
-min_core: 0
+min_core: 827
 max_core: 0
 client_type:
 envs:
 bins: ffmpeg
-packages: stagger, Pillow==9.0.0, hachoir
+packages: stagger, Pillow==9.0.0, hachoir, natsort  #added natsort for personal use
 depends: download, thumbnail
