--- a/plugins/misc/upload/config.ini
+++ b/plugins/misc/upload/config.ini
@@ -5,5 +5,5 @@ max_core: 0
 client_type:
 envs:
 bins: ffmpeg
-packages: stagger, Pillow==9.0.0, hachoir, natsort  #added natsort for personal use
+packages: stagger, Pillow==9.0.0, hachoir, natsort
 depends: download, thumbnail
